This is all new

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -6,14 +6,50 @@
   <script src="scripts.js"></script>
 </head>
 <body>
-    <img id="playButton" src="/image/play-button.jpg">
-    <input id="submit" type="submit" value="Submit">
-     <div style="position:absolute;width:50px;height:25px;overflow:hidden;">
+    <img id="playButton" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+     <div style="position:absolute;width:50px;height:25px;overflow:hidden; left:200px; top:200px;">
   <div style="position:absolute;top:-276px;left:-5px">
     <iframe width="300" height="300" 
       src="https://www.youtube.com/embed/DcjUOdeq6G8">
     </iframe>
   </div>
 </div>
+
+<img id="playButton2" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+     <div style="position:absolute;width:50px;height:25px;overflow:hidden; left:400px; top:200px;">
+  <div style="position:absolute;top:-276px;left:-5px">
+    <iframe width="300" height="300" 
+      src="https://www.youtube.com/embed/Pi8xsZXibIc">
+    </iframe>
+    </div>
+</div>
+<img id="playButton3" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+<div style="position:absolute;width:50px;height:25px;overflow:hidden; left:600px; top:200px;">
+  <div style="position:absolute;top:-276px;left:-5px">
+    <iframe width="300" height="300" 
+      src="https://www.youtube.com/embed/qhrj-Vqp95s">
+    </iframe>
+    </div>
+</div>
+<img id="playButton4" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+<div style="position:absolute;width:50px;height:25px;overflow:hidden; left:800px; top:200px;">
+  <div style="position:absolute;top:-276px;left:-5px">
+    <iframe width="300" height="300" 
+      src="https://www.youtube.com/embed/sEQf5lcnj_o">
+    </iframe>
+    </div>
+</div>
+
+<img id="playButton5" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+<div style="position:absolute;width:50px;height:25px;overflow:hidden; left:1000px; top:200px;">
+  <div style="position:absolute;top:-276px;left:-5px">
+    <iframe width="300" height="300" 
+      src="https://www.youtube.com/embed/XvOsFSYs31w>
+    </iframe>
+    </div>
+</div>
+
 </body>
 </html>
+<!--#This is just a comment of something I'll might need later on *;-->
+<!--#Same as previous line -->
