this is all the new stuff added

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -3,9 +3,15 @@
 <head>
   <title>Music</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="script.js"></script>
+
 </head>
 <body>
+  <button id="first" type="button">
+    Random Music
+    </button>
+  
     <img id="playButton" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
      <div style="position:absolute;width:50px;height:25px;overflow:hidden; left:200px; top:200px;">
   <div style="position:absolute;top:-276px;left:-5px">
@@ -44,7 +50,16 @@
 <div style="position:absolute;width:50px;height:25px;overflow:hidden; left:1000px; top:200px;">
   <div style="position:absolute;top:-276px;left:-5px">
     <iframe width="300" height="300" 
-      src="https://www.youtube.com/embed/XvOsFSYs31w>
+      src="https://www.youtube.com/embed/XvOsFSYs31w">
+    </iframe>
+    </div>
+</div>
+
+<img id="playButton6" src="https://s-media-cache-ak0.pinimg.com/originals/45/5d/d4/455dd42e78bd3a8ff66b88eb65c815f1.png">
+<div style="position:absolute;width:50px;height:25px;overflow:hidden; left:1200px; top:200px;">
+  <div style="position:absolute;top:-276px;left:-5px">
+    <iframe width="300" height="300" 
+      src="https://www.youtube.com/embed/Nq-oZQLcNAg">
     </iframe>
     </div>
 </div>
